--- a/app/src/main/res/layout-xlarge/game.xml
+++ b/app/src/main/res/layout-xlarge/game.xml
@@ -146,14 +146,16 @@
             android:layout_marginLeft="5dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:background="#A4FF8144"
+            android:background="#e100d454"
+            android:textColor="#ffffffff"
             android:onClick="onClick"/>
 
         <Button
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:id="@+id/buttonLetter1"
-            android:background="#A4FF8144"
+            android:textColor="#ffffffff"
+            android:background="#e100d454"
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/buttonLetter0"
             android:layout_toEndOf="@+id/buttonLetter0"
@@ -163,7 +165,8 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:id="@+id/buttonLetter2"
-            android:background="#A4FF8144"
+            android:background="#e100d454"
+            android:textColor="#ffffffff"
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/buttonLetter1"
             android:layout_toEndOf="@+id/buttonLetter1"
@@ -173,7 +176,8 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:id="@+id/buttonLetter3"
-            android:background="#A4FF8144"
+            android:textColor="#ffffffff"
+            android:background="#e100d454"
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/buttonLetter2"
             android:layout_toEndOf="@+id/buttonLetter2"
@@ -183,7 +187,8 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:id="@+id/buttonLetter4"
-            android:background="#A4FF8144"
+            android:textColor="#ffffffff"
+            android:background="#e100d454"
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/buttonLetter3"
             android:layout_toEndOf="@+id/buttonLetter3"
@@ -193,8 +198,9 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:id="@+id/buttonLetter5"
+            android:textColor="#ffffffff"
             android:layout_marginLeft="10dp"
-            android:background="#A4FF8144"
+            android:background="#e100d454"
             android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/buttonLetter4"
             android:layout_toEndOf="@+id/buttonLetter4"
@@ -207,7 +213,7 @@
             android:id="@+id/imageButton8"
             android:text="\?"
             android:textColor="#ffffffff"
-            android:background="#ff1ed448"
+            android:background="#b5fffe00"
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/buttonLetter5"
             android:layout_toEndOf="@+id/buttonLetter5"
@@ -217,8 +223,9 @@
         <Button
             android:layout_width="90dp"
             android:layout_height="90dp"
+            android:textColor="#ffffffff"
             android:id="@+id/buttonLetter6"
-            android:background="#A4FF8144"
+            android:background="#e100d454"
             android:layout_toLeftOf="@+id/buttonLetter1"
             android:layout_toStartOf="@+id/buttonLetter1"
             android:layout_marginTop="100dp"
@@ -228,7 +235,8 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:id="@+id/buttonLetter7"
-            android:background="#A4FF8144"
+            android:textColor="#ffffffff"
+            android:background="#e100d454"
             android:layout_alignTop="@+id/buttonLetter6"
             android:layout_toLeftOf="@+id/buttonLetter2"
             android:layout_toStartOf="@+id/buttonLetter2"
@@ -238,7 +246,8 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:id="@+id/buttonLetter8"
-            android:background="#A4FF8144"
+            android:textColor="#ffffffff"
+            android:background="#e100d454"
             android:layout_alignTop="@+id/buttonLetter7"
             android:layout_toLeftOf="@+id/buttonLetter3"
             android:layout_toStartOf="@+id/buttonLetter3"
@@ -248,7 +257,8 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:id="@+id/buttonLetter9"
-            android:background="#A4FF8144"
+            android:textColor="#ffffffff"
+            android:background="#e100d454"
             android:layout_alignTop="@+id/buttonLetter8"
             android:layout_toLeftOf="@+id/buttonLetter4"
             android:layout_toStartOf="@+id/buttonLetter4"
@@ -258,7 +268,8 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:id="@+id/buttonLetter10"
-            android:background="#A4FF8144"
+            android:textColor="#ffffffff"
+            android:background="#e100d454"
             android:layout_alignTop="@+id/buttonLetter9"
             android:layout_alignLeft="@+id/buttonLetter4"
             android:layout_alignStart="@+id/buttonLetter4"
@@ -268,7 +279,8 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:id="@+id/buttonLetter11"
-            android:background="#A4FF8144"
+            android:textColor="#ffffffff"
+            android:background="#e100d454"
             android:layout_alignTop="@+id/buttonLetter10"
             android:layout_toLeftOf="@+id/imageButton8"
             android:layout_toStartOf="@+id/imageButton8"
@@ -278,7 +290,8 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:id="@+id/buttonLetter12"
-            android:background="#A4FF8144"
+            android:textColor="#ffffffff"
+            android:background="#e100d454"
             android:layout_alignTop="@+id/buttonLetter11"
             android:layout_alignLeft="@+id/imageButton8"
             android:layout_alignStart="@+id/imageButton8"
