--- a/app/src/main/res/layout/win.xml
+++ b/app/src/main/res/layout/win.xml
@@ -56,7 +56,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="А в Африке капец как жарко - что дохнут мухи и слоны"
+            android:text="_"
             android:textColor="#ffffffff"
             android:textSize="18sp"
             android:layout_marginLeft="40dp"
@@ -82,7 +82,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="25"
+                android:text="15"
                 android:textColor="#FFFFFF"
                 android:textSize="40sp"
                 android:layout_centerVertical="true" />
