--- a/app/src/main/res/values/quotations.xml
+++ b/app/src/main/res/values/quotations.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="q1" id="1">Вес человека в течение дня может меняться на 2,5 кг.</string>
-    <string name="q2" id="2">Каждый градус выше 26 понижает работоспособность человека приблизительно на 10 процентов.</string>
-    <string name="q3" id="3">Не позволяй слухам влиять на твои решения.</string>
-    <string name="q4" id="4">В 70-х годах в Японии были изобретены суши-автоматы.</string>
-    <string name="q5" id="5">Первые книги, похожие на современные, появились примерно в I веке нашей эры. Они изготавливались из дерева и расплавленным воском писались слова.</string>
-    <string name="q6" id="6">С помощью археологии нельзя определить, когда люди стали носить одежду, так как она не сохраняется в захоронениях.</string>
-    <string name="q7" id="7">2% женщин могут воспринимать до 100 миллионов цветов.</string>
-    <string name="q8" id="8">В больницах Санкт-Петербурга до середины XIX века в качестве дезинфицирующего, общеукрепляющего, тонизирующего средства.</string>
+    <string name="q1">Вес человека в течение дня может меняться на 2,5 кг.</string>
+    <string name="q2">Каждый градус выше 26 понижает работоспособность человека приблизительно на 10 процентов.</string>
+    <string name="q3">Не позволяй слухам влиять на твои решения.</string>
+    <string name="q4">В 70-х годах в Японии были изобретены суши-автоматы.</string>
+    <string name="q5">Первые книги, похожие на современные, появились примерно в I веке нашей эры. Они изготавливались из дерева и расплавленным воском писались слова.</string>
+    <string name="q6">С помощью археологии нельзя определить, когда люди стали носить одежду, так как она не сохраняется в захоронениях.</string>
+    <string name="q7">2% женщин могут воспринимать до 100 миллионов цветов.</string>
+    <string name="q8">В больницах Санкт-Петербурга до середины XIX века в качестве дезинфицирующего, общеукрепляющего, тонизирующего средства использовали пиво.</string>
     <string name="q9">Специально проведенные многолетние исследования ученых доказали, что в мире нет абсолютно одинаковых снежинок.</string>
     <string name="q10">Произнося фразу «Лень — двигатель прогресса», обычно приводят в пример телевизионный пульт ДУ.</string>
     <string name="q11">Поцелуи, скорее всего, возникли тогда, когда матери передавали младенцам разжеванную пищу изо рта в рот.</string>
     <string name="q12">С момента, как мы познакомились, жить стало веселее.</string>
-    <string name="q13">Слово «мёд» имеет еврейского происхождение. Дословно его можно перевести как «чары» или «наделенный магией».</string>
+    <string name="q13">Слово «мёд» имеет еврейское происхождение. Дословно его можно перевести как «чары» или «наделенный магией».</string>
     <string name="q14">Песня «Every Breath You Take», визитная карточка группы The Police, многими воспринимается как гимн любви.</string>
     <string name="q15">Главный химический элемент драгоценных камней – кислород.</string>
     <string name="q16">Один из самых популярных видов ретроконфет, соевый батончик, лишь отчасти состоит из сои.</string>
@@ -26,7 +26,7 @@
     <string name="q24">Отвращение к мухам легко превращается в симпатию к паукам.</string>
     <string name="q25">Полотенце принято дарить в двух случаях: на свадьбу и на крещение.</string>
     <string name="q26">Розовый цвет успокаивает нервы.</string>
-    <string name="q27">Бейсбол – и название, и сама игра – был изобретен в Англии в 1750-х годах.</string>
+    <string name="q27">Бейсбол (и название, и сама игра) – был изобретен в Англии в 1750-х годах.</string>
     <string name="q28">— И эти хищники? — Они травоядные. Но для тебя они сделают исключение!</string>
     <string name="q29">Человечество на планете Земля съедает более 9 000 000 буханок хлеба каждый день. Между прочим, из этого количества можно сделать 90 миллионов бутербродов.</string>
     <string name="q30">По статистике, три человека из ста страдают аэрофобией - паническим страхом летать на самолетах.</string>
@@ -46,7 +46,7 @@
     <string name="q44">Ваше тело незамедлительно начинает вырабатывать эндорфины, когда вы улыбаетесь.</string>
     <string name="q45">Ниагарский водопад каждую секунду низвергает 6 тысяч тонн воды с высоты 50 метров.</string>
     <string name="q46">Леонардо оставил после себя менее 30 картин, и не все из них закончены.</string>
-    <string name="q47">При копчении используются ольха, плодовые, дуб.</string>
+    <string name="q47">При копчении используются ольха, плодовые деревья и дуб.</string>
     <string name="q48">На ликёро-водочном заводе помимо сторожа еще есть сторож, охраняющий завод от сторожа.</string>
     <string name="q49">История бурения артезианских скважин насчитывает более 3,5 тысячи лет.</string>
     <string name="q50">Веками магия считалась таинственным и непонятным культом, доступным лишь небольшому кругу «одаренных» людей.</string>
@@ -132,7 +132,7 @@
     <string name="q130">Пояс верности был изобретен для того, чтобы оградить женщину от всем известных мужских посягательств.</string>
     <string name="q131">В первую мировую войну для охоты на вражеские дирижабли использовали солидных размеров кухонные ножи.</string>
     <string name="q132">В мире существует более 700 сортов риса.</string>
-    <string name="q133">В Майами кубинский танец конга одновременно танцевали 119986 человек.</string>
+    <string name="q133">В Майами кубинский танец конга одновременно танцевали 119 986 человек.</string>
     <string name="q134">Винтажной можно назвать только ту одежду, которая была изготовлена между 1920-1960 годами.</string>
     <string name="q135">То, что мы называем «сараем», в казахском языке понимается как дворец.</string>
     <string name="q136">Согласно статистике 50% людей не нравится их нос.</string>
@@ -149,15 +149,15 @@
     <string name="q147">Клавиатура компьютера в 18 раз грязнее, чем рукоятка бачка унитаза.</string>
     <string name="q148">Во время Второй Мировой войны статуэтки Оскара изготавливались из гипса.</string>
     <string name="q149">Пираты — морские разбойники, специализирующиеся на ограблениях торговых кораблей, портов и даже мелких приморских городишек.</string>
-    <string name="q150">Пожалуй, я никогда не встречала такой дерзкой и непредсказуемой женщины, как Весенняя Погода.</string>
+    <string name="q150">Пожалуй, я никогда не встречал такой дерзкой и непредсказуемой женщины, как Весенняя Погода.</string>
     <string name="q151">Семена лотоса могут годами оставаться в стадии покоя, дожидаясь благоприятных условий для развития.</string>
-    <string name="q152">В Китае встретить конфеты, в которые добавляется имбирь или перец вместо сахара.</string>
+    <string name="q152">В Китае можно встретить конфеты, в которые добавляется имбирь или перец вместо сахара.</string>
     <string name="q153">80 тысяч советских офицеров во время Великой Отечественной войны были женщины.</string>
     <string name="q154">Мопсы были любимыми собаками жены Наполеона Бонапарта - Жозефины.</string>
     <string name="q155">Мята считалась травой Афродиты и использовалась как афродизиак.</string>
     <string name="q156">Никого не интересует идея. Всех интересует человек, одержимый идеей.</string>
     <string name="q157">Родео (исп. Rodeo) — традиционный вид спорта исторически начавшийся среди мексиканских и американских ковбоев.</string>
-    <string name="q158">Варить пасту впервые начали арабы в 5 в. н.э.</string>
+    <string name="q158">Варить пасту впервые начали арабы в 5 в. до н.э.</string>
     <string name="q159">Билл Клинтон за все свое президентство отправил лишь два электронных письма, одно из которых было тестовое.</string>
     <string name="q160">В возрасте четырех лет Вольфганг Моцарт мог выучить наизусть музыкальное произведение за полчаса.</string>
     <string name="q161">В Австралии не найдено ни одной ископаемой лошади. На материк этих животных привезли с собой поселенцы в 18 веке.</string>
@@ -199,5 +199,5 @@
     <string name="q197">Есть двери, которые навсегда должны остаться закрытыми. Есть тайны, которые должны быть забыты.</string>
     <string name="q198">Крупнейший аэропорт на планете – аэропорт Хартсифилда-Джексона, который находится в американском штате Джорджия. Ежегодно через него проходит 92 миллиона пассажиров.</string>
     <string name="q199">Самыми агрессивными водителями являются владельцы автомобилей марки BMW.</string>
-    <string name="q200">Какой-то Дед Мороз нынче… насморочный.</string>
+    <string name="q200">Поздравляем! Вы прошли игру. Ваш IQ увеличился на 3 пункта. Ожидайте новых уровней в ближайшем обновлении.</string>
 </resources>
