займаюсь баловством з мейн актівіті)

--- a/app/src/main/res/layout-large/about.xml
+++ b/app/src/main/res/layout-large/about.xml
@@ -118,7 +118,7 @@
         android:text="
         Команда разработчиков DailyAppsLab благодарит вас за установку игры. С любыми пожеланиями или предложениями вы можете обратиться к нам по электронному адресу dailyappslab@gmail.com
         Если вам понравилась игра - пожалуйста, поддержите нас отзывами о оценкам!
-        Желаем удачи и пряитного времяпровождения!"
+        Желаем удачи и приятного времяпровождения!"
         android:textStyle="italic" />
 
 
