--- a/app/src/main/res/layout-small/about.xml
+++ b/app/src/main/res/layout-small/about.xml
@@ -103,20 +103,25 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ифна о нас"
+        android:text="Обращение к пользователям"
         android:id="@+id/textView"
         android:textColor="#ffffff"
         android:layout_marginTop="0dp"
         android:layout_gravity="center_horizontal"
-        android:textSize="30sp" />
+        android:textSize="20sp"
+        android:textStyle="bold"/>
 
     <TextView
         android:layout_margin="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="15sp"
-        android:textColor="#ffaeabad"
-        android:text=""/>
+        android:textColor="#FFFFFF"
+        android:text="
+        Команда разработчиков DailyAppsLab благодарит вас за установку игры. С любыми пожеланиями или предложениями вы можете обратиться к нам по электронному адресу dailyappslab@gmail.com
+        Если вам понравилась игра - пожалуйста, поддержите нас отзывами о оценкам!
+        Желаем удачи и приятного времяпровождения!"
+        android:textStyle="italic" />
 
 
 </LinearLayout>
