--- a/app/src/main/res/layout-large/about.xml
+++ b/app/src/main/res/layout-large/about.xml
@@ -115,10 +115,9 @@
         android:layout_height="wrap_content"
         android:textSize="23sp"
         android:textColor="#FFFFFF"
-        android:text="
-        Команда разработчиков DailyAppsLab благодарит вас за установку игры. С любыми пожеланиями или предложениями вы можете обратиться к нам по электронному адресу dailyappslab@gmail.com
-        Если вам понравилась игра - пожалуйста, поддержите нас отзывами о оценкам!
-        Желаем удачи и приятного времяпровождения!"
+        android:autoLink="email"
+        android:textColorLink="#ff0010b6"
+        android:text="      Команда разработчиков DailyAppsLab благодарит вас за установку игры. С любыми пожеланиями или предложениями вы можете обратиться к нам по электронному адресу dailyappslab@gmail.com \n     Если вам понравилась игра - пожалуйста, поддержите нас отзывами о оценкам! \n    Желаем удачи и приятного времяпровождения!"
         android:textStyle="italic" />
 
 
