--- a/app/src/main/res/layout-xlarge/game.xml
+++ b/app/src/main/res/layout-xlarge/game.xml
@@ -148,7 +148,7 @@
             android:layout_alignParentStart="true"
             android:background="#e16fcfc0"
             android:textColor="#ffffffff"
-            android:onClick="onClick"/>
+            android:onClick="onClickActualLetter"/>
 
         <Button
             android:layout_width="90dp"
@@ -159,7 +159,7 @@
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/buttonLetter0"
             android:layout_toEndOf="@+id/buttonLetter0"
-            android:onClick="onClick" />
+            android:onClick="onClickActualLetter" />
 
         <Button
             android:layout_width="90dp"
@@ -170,7 +170,7 @@
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/buttonLetter1"
             android:layout_toEndOf="@+id/buttonLetter1"
-            android:onClick="onClick" />
+            android:onClick="onClickActualLetter" />
 
         <Button
             android:layout_width="90dp"
@@ -181,7 +181,7 @@
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/buttonLetter2"
             android:layout_toEndOf="@+id/buttonLetter2"
-            android:onClick="onClick" />
+            android:onClick="onClickActualLetter" />
 
         <Button
             android:layout_width="90dp"
@@ -192,7 +192,7 @@
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/buttonLetter3"
             android:layout_toEndOf="@+id/buttonLetter3"
-            android:onClick="onClick" />
+            android:onClick="onClickActualLetter" />
 
         <Button
             android:layout_width="90dp"
@@ -204,7 +204,7 @@
             android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/buttonLetter4"
             android:layout_toEndOf="@+id/buttonLetter4"
-            android:onClick="onClick"
+            android:onClick="onClickActualLetter"
             />
 
         <Button
@@ -229,7 +229,7 @@
             android:layout_toLeftOf="@+id/buttonLetter1"
             android:layout_toStartOf="@+id/buttonLetter1"
             android:layout_marginTop="100dp"
-            android:onClick="onClick"/>
+            android:onClick="onClickActualLetter"/>
 
         <Button
             android:layout_width="90dp"
@@ -240,7 +240,7 @@
             android:layout_alignTop="@+id/buttonLetter6"
             android:layout_toLeftOf="@+id/buttonLetter2"
             android:layout_toStartOf="@+id/buttonLetter2"
-            android:onClick="onClick" />
+            android:onClick="onClickActualLetter" />
 
         <Button
             android:layout_width="90dp"
@@ -251,7 +251,7 @@
             android:layout_alignTop="@+id/buttonLetter7"
             android:layout_toLeftOf="@+id/buttonLetter3"
             android:layout_toStartOf="@+id/buttonLetter3"
-            android:onClick="onClick" />
+            android:onClick="onClickActualLetter" />
 
         <Button
             android:layout_width="90dp"
@@ -262,7 +262,7 @@
             android:layout_alignTop="@+id/buttonLetter8"
             android:layout_toLeftOf="@+id/buttonLetter4"
             android:layout_toStartOf="@+id/buttonLetter4"
-            android:onClick="onClick" />
+            android:onClick="onClickActualLetter" />
 
         <Button
             android:layout_width="90dp"
@@ -273,7 +273,7 @@
             android:layout_alignTop="@+id/buttonLetter9"
             android:layout_alignLeft="@+id/buttonLetter4"
             android:layout_alignStart="@+id/buttonLetter4"
-            android:onClick="onClick" />
+            android:onClick="onClickActualLetter" />
 
         <Button
             android:layout_width="90dp"
@@ -284,7 +284,7 @@
             android:layout_alignTop="@+id/buttonLetter10"
             android:layout_toLeftOf="@+id/imageButton8"
             android:layout_toStartOf="@+id/imageButton8"
-            android:onClick="onClick" />
+            android:onClick="onClickActualLetter" />
 
         <Button
             android:layout_width="90dp"
@@ -295,7 +295,7 @@
             android:layout_alignTop="@+id/buttonLetter11"
             android:layout_alignLeft="@+id/imageButton8"
             android:layout_alignStart="@+id/imageButton8"
-            android:onClick="onClick" />
+            android:onClick="onClickActualLetter" />
 
     </RelativeLayout>
 
