Fixed latters buttons bug on xlarge layout; Fixed cost of the hint with letter removing;

--- a/app/src/main/res/values/quotations.xml
+++ b/app/src/main/res/values/quotations.xml
@@ -163,7 +163,7 @@
     <string name="q161">В Австралии не найдено ни одной ископаемой лошади. На материк этих животных привезли с собой поселенцы в 18 веке.</string>
     <string name="q162">Вчера московские милиционеры разогнали гей-парад. При этом обе стороны обзывали друг друга одними и теми же словами.</string>
     <string name="q163">Закрепить изображение на фото первым смог в 1826 году Жозеф Ньепс. Экспозиция этого снимка продолжалась 8 часов и назывался он «Вид из окна».</string>
-    <string name="q164">Во время шторма волны иногда выбрасывают обломки скал весом до 13 тонн на высоту 20 метров.</string>
+    <string name="q164">Самые первые свечи были родом из Китая и Японии и изготавливались из китового жира.</string>
     <string name="q165">Ни одно животное не способно испытывать скуку, когда его жизненные потребности удовлетворены.</string>
     <string name="q166">Официанты, которые постоянно улыбаются клиентам, получают в 1,5 раза больше чаевых.</string>
     <string name="q167">В средневековой Европе, чтобы совершить клятву, человек должен был возложить руку на Библию.</string>
