--- a/app/src/main/res/layout-small/game.xml
+++ b/app/src/main/res/layout-small/game.xml
@@ -12,7 +12,7 @@
 
         <RelativeLayout
             android:layout_width="100dp"
-            android:layout_height="30dp"
+            android:layout_height="20dp"
             android:background="@drawable/coni"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
@@ -21,8 +21,8 @@
             android:onClick="ShowGameshopPopUp">
 
             <ImageView
-                android:layout_width="15dp"
-                android:layout_height="15dp"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
                 android:background="@drawable/plus"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
@@ -35,14 +35,14 @@
                 android:alpha="0.7"
                 android:id="@+id/textViewGold"
                 android:layout_centerVertical="true"
-                android:textSize="18sp"
+                android:textSize="9sp"
                 android:layout_marginRight="5dp"
                 android:textColor="#ffffffff"
                 android:layout_toLeftOf="@+id/imageView"/>
 
             <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
                 android:background="@drawable/coins"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
@@ -53,7 +53,7 @@
 
         <RelativeLayout
             android:layout_width="60dp"
-            android:layout_height="30dp"
+            android:layout_height="20dp"
             android:layout_centerVertical="true"
             android:background="@drawable/coni"
             android:layout_marginLeft="3dp"
@@ -62,7 +62,7 @@
 
             <ImageButton
                 android:layout_width="30dp"
-                android:layout_height="12dp"
+                android:layout_height="9dp"
                 android:id="@+id/imageButton3"
                 android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true"
@@ -77,7 +77,7 @@
 
         <RelativeLayout
             android:layout_width="65dp"
-            android:layout_height="30dp"
+            android:layout_height="20dp"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
             android:background="@drawable/coni"
@@ -90,7 +90,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:textColor="#ffffffff"
-                android:textSize="22sp"
+                android:textSize="9sp"
                 android:id="@+id/textViewCurLevel"
                 android:alpha="0.7"/>
 
@@ -103,22 +103,22 @@
 
     </RelativeLayout>
 
-    <RelativeLayout android:id="@+id/container" android:layout_width="match_parent" android:layout_height="310dp" android:layout_marginTop="20dp">
+    <RelativeLayout android:id="@+id/container" android:layout_width="match_parent" android:layout_height="230dp" android:layout_marginTop="20dp">
         <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:paddingTop="10dp" android:gravity="center" android:layout_marginTop="10dp">
             <!--
              This is an example layout containing thumbnail image buttons that, when pressed,
                          zoom in to show more detail. All of the zooming and animation logic is in
                          the ZoomActivity class.
             -->
-            <AbsoluteLayout android:layout_width="270dp" android:layout_height="270dp" android:layout_centerHorizontal="true">
-                <ImageButton android:layout_width="130dp" android:layout_height="130dp" android:layout_x="0dp" android:layout_y="0dp" android:background="#ff384653" android:layout_marginBottom="5dp" android:id="@+id/imageView1" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:padding="2dp"/>
-                <ImageButton android:layout_width="130dp" android:layout_height="130dp" android:layout_x="140dp" android:background="#ff384653" android:adjustViewBounds="false" android:baselineAlignBottom="false" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:layout_marginLeft="5dp" android:id="@+id/imageView2" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="2dp"/>
-                <ImageButton android:layout_width="130dp" android:layout_height="130dp" android:layout_x="0dp" android:layout_y="140dp" android:background="#ff384653" android:clickable="false" android:layout_alignParentBottom="true" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:id="@+id/imageView3" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="2dp"/>
+            <AbsoluteLayout android:layout_width="230dp" android:layout_height="230dp" android:layout_centerHorizontal="true">
+                <ImageButton android:layout_width="110dp" android:layout_height="110dp" android:layout_x="0dp" android:layout_y="0dp" android:background="#ff384653" android:layout_marginBottom="5dp" android:id="@+id/imageView1" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:padding="2dp"/>
+                <ImageButton android:layout_width="110dp" android:layout_height="110dp" android:layout_x="120dp" android:background="#ff384653" android:adjustViewBounds="false" android:baselineAlignBottom="false" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:layout_marginLeft="5dp" android:id="@+id/imageView2" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="2dp"/>
+                <ImageButton android:layout_width="110dp" android:layout_height="110dp" android:layout_x="0dp" android:layout_y="120dp" android:background="#ff384653" android:clickable="false" android:layout_alignParentBottom="true" android:layout_alignParentLeft="true" android:layout_alignParentStart="true" android:id="@+id/imageView3" android:layout_marginRight="1dp" android:scaleType="centerCrop" android:padding="2dp"/>
                 <ImageButton
-                    android:layout_width="130dp"
-                    android:layout_height="130dp"
-                    android:layout_x="140dp"
-                    android:layout_y="140dp"
+                    android:layout_width="110dp"
+                    android:layout_height="110dp"
+                    android:layout_x="120dp"
+                    android:layout_y="120dp"
                     android:background="#ff384653"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentRight="true"
@@ -141,7 +141,7 @@
         </LinearLayout>
     </RelativeLayout>
     <LinearLayout
-        android:layout_marginTop="330dp"
+        android:layout_marginTop="270dp"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:gravity="center"
@@ -157,14 +157,16 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:gravity="center"
-        android:layout_marginTop="380dp"
+        android:layout_marginTop="310dp"
         >
+
+
 
         <Button
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:id="@+id/buttonLetter0"
-            android:layout_marginLeft="5dp"
+            android:layout_marginLeft="2dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:textColor="#ffffffff"
@@ -328,8 +330,8 @@
         <com.google.android.gms.ads.AdView
             xmlns:ads="http://schemas.android.com/apk/res-auto"
             android:id="@+id/adView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
             ads:adUnitId="ca-app-pub-3376890691318599/3908610460"
             ads:adSize="SMART_BANNER"/>
 
