--- a/app/src/main/res/xml/global_tracker.xml
+++ b/app/src/main/res/xml/global_tracker.xml
@@ -1,19 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools"
-    tools:ignore="TypographyDashes">
+<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyDashes">
+
     <!-- the Local LogLevel for Analytics -->
     <string name="ga_logLevel">verbose</string>
 
     <!-- how often the dispatcher should fire -->
     <integer name="ga_dispatchPeriod">30</integer>
 
+    <!-- Percentage of events to include in reports -->
+    <string name="ga_sampleFrequency">100.0</string>
+
+    <!-- Enable automatic Activity measurement -->
+    <bool name="ga_autoActivityTracking">true</bool>
+
+    <!-- catch and report uncaught exceptions from the app -->
+    <bool name="ga_reportUncaughtExceptions">true</bool>
+
+    <!-- How long a session exists before giving up -->
+    <integer name="ga_sessionTimeout">-1</integer>
+
     <!-- Treat events as test events and don't send to google -->
     <bool name="ga_dryRun">false</bool>
-    <!--The screen names that will appear in reports &ndash;&gt;-->
-    <screenName name="com.dailyappslab.fino.MainActivity">
-        MainActivity
-    </screenName>
-    <screenName name="com.dailyappslab.fino.GameActivity">
-        GameActivity
-    </screenName>
+
+    <!-- The screen names that will appear in reports -->
+    <string name="com.dailyappslab.fino.MainActivity">Main Activity</string>
 </resources>
