Fixed latters buttons bug on xlarge layout; Fixed cost of the hint with letter removing;

--- a/app/src/main/res/values/quotations.xml
+++ b/app/src/main/res/values/quotations.xml
@@ -6,7 +6,7 @@
     <string name="q4">В 70-х годах в Японии были изобретены суши-автоматы.</string>
     <string name="q5">Первые книги, похожие на современные, появились примерно в I веке нашей эры. Они изготавливались из дерева и расплавленным воском писались слова.</string>
     <string name="q6">С помощью археологии нельзя определить, когда люди стали носить одежду, так как она не сохраняется в захоронениях.</string>
-    <string name="q7">2% женщин могут воспринимать до 100 миллионов цветов.</string>
+    <string name="q7">2\%% женщин могут воспринимать до 100 миллионов цветов.</string>
     <string name="q8">В больницах Санкт-Петербурга до середины XIX века в качестве дезинфицирующего, общеукрепляющего, тонизирующего средства использовали пиво.</string>
     <string name="q9">Специально проведенные многолетние исследования ученых доказали, что в мире нет абсолютно одинаковых снежинок.</string>
     <string name="q10">Произнося фразу «Лень — двигатель прогресса», обычно приводят в пример телевизионный пульт ДУ.</string>
@@ -33,7 +33,7 @@
     <string name="q31">В чистом виде железо встречается всего в нескольких местах. Одно из них – Гренландия.</string>
     <string name="q32">Крылья насекомых, образованные тонкими мембранами, натянутых на каркас жилок, которые выполняют опорную функцию.</string>
     <string name="q33">Игра в прятки помогает детям избавиться от страхов темноты и замкнутого пространства.</string>
-    <string name="q34">Примерно 1-2% людей или около 20 человек на тысячу имеют рыжие волосы.</string>
+    <string name="q34">Примерно 1-2\%% людей или около 20 человек на тысячу имеют рыжие волосы.</string>
     <string name="q35">Энергии солнечного света вполне достаточно, чтобы обеспечить все нужды человечества.</string>
     <string name="q36">Некоторые вещества начинают пахнуть только под большим давлением.</string>
     <string name="q37">При рождении ребёнок не имеет коленных чашечек, они формируются где-то между двумя-пятью годами.</string>
@@ -95,16 +95,16 @@
     <string name="q93">3,5 млн. чел. в мире ежегодно умирает от последствий курения</string>
     <string name="q94">Впервые свойство инерции было сформулировано Галилеем (1632 г.)</string>
     <string name="q95">Самое первое письменное свидетельство об исследовании Арктики датируется IV в. до н.э.</string>
-    <string name="q96">Любители классической традиции ежедневного обеденного бокала, на 80% менее уязвимы риску фатальных последствий от кардиоваскулярных заболеваний.</string>
+    <string name="q96">Любители классической традиции ежедневного обеденного бокала, на 80\%% менее уязвимы риску фатальных последствий от кардиоваскулярных заболеваний.</string>
     <string name="q97">Карнавал в Бразилии продолжается четыря дня: с субботы по вторник.</string>
     <string name="q98">Детей в возрасте до 8 лет лучше воспитывают матери, а с 8 до 17 лет – отцы.</string>
     <string name="q99">Самый распространенный мусор на планете - сигаретные окурки. Ежегодно их выбрасывается 4.500.000.000 штук.</string>
     <string name="q100">Если у тебя есть сад и библиотека, то у тебя есть все, что тебе нужно.</string>
     <string name="q101">Спираль эволюции оказалась противозачаточной.</string>
     <string name="q102">По статистике, среди всех дней в году самый высокий риск умереть приходится на день рождения.</string>
-    <string name="q103">Собираясь на летний курорт 33% людей забывают положить в чемодан купальные принадлежности.</string>
+    <string name="q103">Собираясь на летний курорт 33\%% людей забывают положить в чемодан купальные принадлежности.</string>
     <string name="q104">Одной из весовых единиц античности был скрупул, примерно равный 1,14 грамма.</string>
-    <string name="q105">У 80 % растений на Земле есть цветки, у которых одна цель — создать потомство.</string>
+    <string name="q105">У 80\%% растений на Земле есть цветки, у которых одна цель — создать потомство.</string>
     <string name="q106">На заре авиации самолеты совершали развороты с помощью скольжения.</string>
     <string name="q107">До изобретения механических часов люди пользовались в основном солнечными часами.</string>
     <string name="q108">Должно пройти около 450 лет, прежде чем пластик начнет разлагаться.</string>
@@ -135,12 +135,12 @@
     <string name="q133">В Майами кубинский танец конга одновременно танцевали 119 986 человек.</string>
     <string name="q134">Винтажной можно назвать только ту одежду, которая была изготовлена между 1920-1960 годами.</string>
     <string name="q135">То, что мы называем «сараем», в казахском языке понимается как дворец.</string>
-    <string name="q136">Согласно статистике 50% людей не нравится их нос.</string>
+    <string name="q136">Согласно статистике 50\%% людей не нравится их нос.</string>
     <string name="q137">Ежегодно в мире на рекламу тратится более $500 миллиардов.</string>
     <string name="q138">Солнце на самом деле белое, если смотреть из космоса, так как его свет не рассеивается нашей атмосферой.</string>
     <string name="q139">Несколько веков назад проживающий в Южной Африке народ нама использовал особо смышлёных павианов в качестве пастухов коз.</string>
     <string name="q140">За время строительства плотины Гувера на реке Колорадо погибло 112 человек.</string>
-    <string name="q141">Около 80% бизнесов Сицилии и Калабрии платят дань мафии.</string>
+    <string name="q141">Около 80\%% бизнесов Сицилии и Калабрии платят дань мафии.</string>
     <string name="q142">Начальная скорость полета пробки от шампанского — до 50км/ч, высота полета — до 12 метров.</string>
     <string name="q143">Знание — орудие, а не цель.</string>
     <string name="q144">Почти 100 лет понадобилось изобретателям всего мира, чтобы полностью оснастить стиральную машинку.</string>
@@ -199,5 +199,56 @@
     <string name="q197">Есть двери, которые навсегда должны остаться закрытыми. Есть тайны, которые должны быть забыты.</string>
     <string name="q198">Крупнейший аэропорт на планете – аэропорт Хартсифилда-Джексона, который находится в американском штате Джорджия. Ежегодно через него проходит 92 миллиона пассажиров.</string>
     <string name="q199">Самыми агрессивными водителями являются владельцы автомобилей марки BMW.</string>
-    <string name="q200">Поздравляем! Вы прошли игру. Ваш IQ увеличился на 3 пункта. Ожидайте новых уровней в ближайшем обновлении.</string>
+    <string name="q200">Финляндия считается самой богатой лесами европейской страной. 70\%% ее общей площади покрыто именно ними.</string>
+    <string name="q201">Коричневый цвет, с точки зрения психологов, предпочитают люди, стремящиеся к стабильности и покою, старающиеся избежать риска и резких перемен в жизни.</string>
+    <string name="q202">На матч судья берет обычно 2-3 свистка, а кто-то и все пять, один на шее, другие про запас, в кармашке шорт.</string>
+    <string name="q203">Перед тем, как объединить Италию и стать национальным героем, Джузеппе Гарибальди жил на острове Статен в США и работал на свечном заводе.</string>
+    <string name="q204">Бумага и картон – самые популярные упаковочные материалы в мире.</string>
+    <string name="q205">На границе Южной и Северной Кореи находится демилитаризованная зона шириной 4 километра. На одном участке этой зоны расположен конференц-зал, в котором происходят все официальные переговоры между делегациями государств.</string>
+    <string name="q206">В 2004 году наконец-то удалось потушить пожар в Китае, на месторождении угля. Он длился целых 130 лет.</string>
+    <string name="q207">На вершине индонезийского вулкана Келимуту расположены три озера, каждое из которых периодически меняет цвет от бирюзового к зелёному, красному и чёрному.</string>
+    <string name="q208">Существует искусственно созданное место концентрации близнецов: Твинзбург в штате Огайо.</string>
+    <string name="q209">В большинстве иранских домов вы не найдете ни столов, ни стульев. Для этих нужд они используют большие напольные подушки и лежанки.</string>
+    <string name="q210">В настоящее время 70\%% территории нашей планеты покрыты водой. При этом пить можно только 1\%% этой воды.</string>
+    <string name="q211">Первая «фотобумага» была из асфальта. Точнее, на медную или стеклянную пластину наносился асфальтовый лак.</string>
+    <string name="q212">Компания Lego является самым крупным производителем автомобильных шин в мире. Она производит около 300 миллионов миниатюрных шин в год.</string>
+    <string name="q213">Вес пазлов с числом элементов около 10 000 составляет более десятка килограмм.</string>
+    <string name="q214">Самый большой внутренний орган – тонкая кишка. Ее длина составляет приблизительно четыре человеческих роста.</string>
+    <string name="q215">Математика, которую еще называют царицей всех наук, уже более 2000 лет является помощником человечества.</string>
+    <string name="q216">Элементы сине-зелёного цвета помогут создать комфортную и успокаивающую атмосферу.</string>
+    <string name="q217">В Швейцарии четыре официальных языка и нет столицы. При этом, межнациональных конфликтов в стране тоже нет.</string>
+    <string name="q218">Как недоступны те что нам нужны и как доступны те которых не желаем.</string>
+    <string name="q219">Джонни Депп коллекционирует чучела животных и скелеты. Он привозит их со всего света и хранит их у себя дома.</string>
+    <string name="q220">Лучший изгиб на теле женщины - это ее улыбка.</string>
+    <string name="q221">В 1970 году американец из штата Миссури Уильям Циммерман получил патент на небольшие цветные мультипликационные магниты.</string>
+    <string name="q222">Сэндвич был изобретен Джоном Монтегю, четвертым графом Сэндвичским. </string>
+    <string name="q223">В 35 км к югу от Берлина на территории бывшей советской военной базы расположен крупнейший в мире зал. Его размеры: 360 метров в длину, 210 метров в ширину и 107 метров в высоту, объем - 5,5 миллионов кубометров.</string>
+    <string name="q224">Австралопитеки растаптывали мясо, вместо разделывания.</string>
+    <string name="q225">14 марта - неофициальный день числа Пи (3.14).</string>
+    <string name="q226">Стандартная компьютерная сеть, как говорят факты, подвергается более 20-ти вирусным атакам ежедневно.</string>
+    <string name="q227">До 1952 года в Великобритании разрешалось пересылать людей в почтовых посылках, а крупный рогатый скот пересылать почтой можно и сейчас.</string>
+    <string name="q228">В честь 110-летия знаменитого проспекта Тервюрен в Брюсселе был сотворен гигантский омлет, для приготовления которого пришлось потратить 10 тысяч яиц, несколько мешков лука и целых 25 литров масла. </string>
+    <string name="q229">Традиционная мужская прическа африканских воинов-масаи – это мелкие косички спереди, а сзади волосы свободно спадают до талии. Не воины и женщины должны брить свои головы на лысо.</string>
+    <string name="q230">Каждую секунду на Facebook регистрируются 5 новых профилей.</string>
+    <string name="q231">Вес жокея по эталонам не может превосходить 52,5 кг.</string>
+    <string name="q232">На автобусных остановках в ОАЭ есть кондиционеры.</string>
+    <string name="q233">При быстром чтении утомляемость глаз меньше, чем при медленном.</string>
+    <string name="q234">Почти половина людей слышат загадочные голоса.</string>
+    <string name="q235">Женщины предпочитают заказывать вегетарианскую пиццу в два раза чаще, чем мужчины.</string>
+    <string name="q236">Скорость, которую может достигать горнолыжник среднего уровня – 100 км/час. Средняя скорость сноубордистов – 70 км./час.</string>
+    <string name="q237">В Таиланде считается неприличным пользоваться вилкой при еде. Вилку используют только для того, чтобы переложить пищу из тарелки в ложку.</string>
+    <string name="q238">В Японии традиция выдувать мыльные пузыри насчитывает уже не одно столетие. В этой стране наборы для выдувания мыльных пузырей продают с 1677 года.</string>
+    <string name="q239">В теле человека примерно сто триллионов клеток, но лишь десятая часть из них — человеческие клетки. Остальные — микробы.</string>
+    <string name="q240">Свое имя главные герои мультсериала "Чип и Дейл спешат на помощь" получили от мастера-мебельщика. Имена героев получены были получены от фамилии Томаса Чиппендейла, который был мастером по изготовлению мебели.</string>
+    <string name="q241">Киви обнаружили в джунглях только 30 лет назад, до этого никто не подозревал, что этот фрукт существует.</string>
+    <string name="q242">Перец чили был впервые культивирован Центральной и Южной Америке около 3000 до н.</string>
+    <string name="q243">Самым дорогим картофелем в мире считается «La Bonnotte», выращиваемый на острове Нуармутье. Он очень нежный и вкусный. Килограмм такого картофеля стоит около 500 евро.</string>
+    <string name="q244">Рыцари были низкорослыми. На рубеже XIV-XV веков средний рост рыцаря редко превышал 1,60 м (население тогда вообще было низкорослым)</string>
+    <string name="q245">В результате землетрясения, среди домов из бетона, арматуры и прочих материалов, деревянные дома оставались неразрешенными от внешних воздействий.</string>
+    <string name="q246">Человеческий глаз может видеть на всём ночном небе до 5 тысяч звёзд.</string>
+    <string name="q247">Родиной многих видов пшеницы являются Россия, Азербайджан и Италия. Культура была известна в странах Средней Азии, в Греции и Болгарии за 6-7 тысяч лет до н. э.</string>
+    <string name="q248">Переохлаждение - причина воспалительных процессов в 70\%% случаев.</string>
+    <string name="q249">Рекорд по употреблению йогурта на душу населения принадлежит жителям Финляндии, которые поглощают более 35 кг этого продукта в год.</string>
+    <string name="q250">Поздравляем! Вы прошли игру. Ваш IQ увеличился на 3 пункта. Ожидайте новых уровней в ближайшем обновлении.</string>
+
 </resources>
